# llama-cpp-rs

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  package-lock.json  package.json  shell.nix  test-build.Dockerfile
embeddings/: Cargo.toml
embeddings/src/: main.rs
examples/cli/: Cargo.toml  README.md
examples/embeddings/: ARCHITECTURE_GUIDE.md  Cargo.toml
examples/mtmd/: Cargo.toml
examples/mtp-compare/: Cargo.toml
examples/reranker/: Cargo.toml  README.md
examples/server/: Cargo.toml  README.md
examples/simple/: Cargo.toml
examples/speculative-mtp/: Cargo.toml  README.md
examples/usage/: Cargo.toml
llama-cpp/: Cargo.toml
llama-cpp-2/: Cargo.toml  README.md
llama-cpp-2/benches/: generate.rs  grammar_bias.rs
llama-cpp-2/examples/: llava_cli.rs  simple.rs
llama-cpp-2/src/: common_chat.rs  context.rs  gguf.rs  grammar.rs  lib.rs  llama_backend.rs  llama_batch.rs  llava.rs  llguidance_sampler.rs  log.rs  model.rs  mtmd.rs  openai.rs  rpc.rs  sampling.rs  server.rs  speculative.rs  timing.rs  token.rs  token_type.rs
llama-cpp-2/tests/: mtp_speculative.rs  test_generate.rs  test_grammar_generate.rs
llama-cpp-bindings/: Cargo.toml  build.rs
llama-cpp-bindings-build/: Cargo.toml
llama-cpp-bindings-build/src/: android_ndk.rs  bindgen_config.rs  build_gbnf.rs  build_ggml.rs  cmake_common.rs  cmake_config.rs  cpp_wrapper.rs  cpp_wrapper_mtmd.rs  ggml_cmake_options.rs  ggml_system_paths.rs  glob_paths.rs  lib.rs  library_asset_extraction.rs  library_linking.rs  library_name_extraction.rs  rebuild_tracking.rs  shared_libs.rs  stable_cmake_build_dir.rs
llama-cpp-bindings-sys/: Cargo.toml  wrapper.h  wrapper_chat_apply.cpp  wrapper_chat_apply.h  wrapper_chat_parse.cpp  wrapper_chat_parse.h  wrapper_common.cpp  wrapper_common.h  wrapper_fit.cpp  wrapper_fit.h  wrapper_mtmd.cpp  wrapper_mtmd.h  wrapper_oai.cpp  wrapper_oai.h  wrapper_reasoning.cpp  wrapper_reasoning.h  wrapper_token_text.cpp  wrapper_token_text.h  wrapper_tool_calls.cpp  wrapper_tool_calls.h  wrapper_utils.h
llama-cpp-bindings-sys/marker_probes/: chunked_thinking.cpp  chunked_thinking.h  marker_probe.h  registry.cpp
llama-cpp-bindings-sys/src/: lib.rs
llama-cpp-bindings-tests/: Cargo.toml
llama-cpp-bindings-tests/src/: build_user_prompt_with_media_marker.rs  chunk_token_breakdown.rs  classify_sample_loop.rs  decode_hello_world.rs  fixture_session.rs  fixtures_dir.rs  gpu_backend.rs  lib.rs  prime_kv_cache.rs  prime_kv_cache_with.rs  test_fixture.rs  test_model.rs
llama-cpp-bindings-tests/tests/: backend_initialization.rs  chat_template_and_message_parsing.rs  constrained_decoding.rs  context.rs  context_kv_cache.rs  context_session.rs  deepseek_r1_8b_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt.rs  deepseek_r1_8b_classifier_emits_reasoning.rs  deepseek_r1_8b_duck_types_gemma_paired_quote.rs  deepseek_r1_8b_duck_types_glm_key_value_tags.rs  deepseek_r1_8b_duck_types_mistral_bracketed_json.rs  deepseek_r1_8b_duck_types_qwen_xml.rs  deepseek_r1_8b_recognizes_empty_tool_calls_when_input_is_plain_content_with_tools_requested.rs  deepseek_r1_8b_recognizes_empty_tool_calls_when_tools_not_requested.rs  embedding_and_encoder.rs  embeddings.rs  eval_multimodal_chunks_records_exact_token_counts.rs  gemma4_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt.rs  gemma4_classifier_emits_reasoning.rs  gemma4_classifier_emits_reasoning_for_multimodal_thinking_prompt.rs  gemma4_parses_tool_call_payload.rs  gemma4_template_override_returns_full_markers.rs  glm47_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt.rs  glm47_classifier_emits_reasoning.rs  glm47_parses_tool_call_payload.rs  glm47_template_override_returns_full_markers.rs  ingest_prompt_chunk.rs  kv_cache_and_session.rs  llama_backend.rs  llguidance.rs  main.rs  mistral3_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt.rs  mistral3_classifier_emits_reasoning.rs  mistral3_classifier_emits_reasoning_for_multimodal_thinking_prompt.rs  mistral3_parses_tool_call_payload.rs  model.rs  model_chat_template.rs  model_context_creation.rs  model_helpers.rs  model_loading_errors.rs  (+40 more)
llama-cpp-bindings-types/: Cargo.toml
llama-cpp-bindings-types/src/: bracketed_json_shape.rs  json_object_shape.rs  key_value_xml_tags_shape.rs  lib.rs  paired_quote_shape.rs  parsed_chat_message.rs  parsed_tool_call.rs  reasoning_markers.rs  token_usage.rs  token_usage_error.rs  tool_call_args_shape.rs  tool_call_arguments.rs  tool_call_markers.rs  tool_call_value_quote.rs  xml_tags_shape.rs
llama-cpp-bindings/src/: batch_add_error.rs  chat_message_parse_outcome.rs  context.rs  error.rs  eval_multimodal_chunks_params.rs  extract_reasoning_markers_from_probe_renders.rs  extract_tool_call_markers_from_haystack.rs  ffi_error_reader.rs  ffi_status_is_ok.rs  ffi_status_to_i32.rs  ggml_time_us.rs  gguf_context.rs  gguf_context_error.rs  gguf_type.rs  grammar_matcher.rs  ingest_outcome.rs  ingest_prompt_chunk.rs  invalid_numa_strategy.rs  json_schema_to_grammar.rs  lib.rs  llama_backend.rs  llama_backend_device.rs  llama_backend_device_type.rs  llama_backend_numa_strategy.rs  llama_batch.rs  llama_time_us.rs  llama_token_attr.rs  llama_token_attrs.rs  llama_token_attrs_from_int_error.rs  llguidance_sampler.rs  load_backends.rs  load_backends_error.rs  load_backends_from_path.rs  log.rs  log_options.rs  marker_kind.rs  mask_outcome.rs  max_devices.rs  mlock_supported.rs  mmap_supported.rs  (+19 more)
llama-cpp-gbnf/: Cargo.toml
llama-cpp-gbnf-sys/: Cargo.toml  build.rs  wrapper_gbnf.cpp  wrapper_gbnf.h
llama-cpp-gbnf/src/: lib.rs  (+4 more)
llama-cpp-ggml-sys/: CMakeLists.txt  Cargo.toml  build.rs
llama-cpp-log-decoder/: Cargo.toml
llama-cpp-sys-2/: Cargo.toml  README.md  build.rs  wrapper.h  wrapper_common.cpp  wrapper_common.h  wrapper_mtmd.h  wrapper_oai.cpp  wrapper_oai.h  wrapper_parse.cpp  wrapper_server.cpp  wrapper_server.h  wrapper_utils.h
llama-cpp-test-harness/: Cargo.toml
llama-cpp-test-harness-macros/: Cargo.toml
simple/: Cargo.toml
(+254 files in other folders)
