[workspace]
resolver = "2"
members = [
  "llama-cpp-bindings-build",
  "llama-cpp-bindings-sys",
  "llama-cpp-bindings-types",
  "llama-cpp-bindings",
  "llama-cpp-bindings-tests",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "=1.0.102"
bindgen = "=0.72.1"
cc = { version = "=1.2.58", features = ["parallel"] }
cmake = "=0.1.58"
encoding_rs = "=0.8.35"
enumflags2 = "=0.7.12"
find_cuda_helper = "=0.2.0"
glob = "=0.3.3"
hf-hub = "=0.5.0"
llama-cpp-bindings = { path = "llama-cpp-bindings", version = "=0.5.0" }
llama-cpp-bindings-build = { path = "llama-cpp-bindings-build", version = "=0.5.0" }
llama-cpp-bindings-sys = { path = "llama-cpp-bindings-sys", version = "=0.5.0" }
llama-cpp-bindings-types = { path = "llama-cpp-bindings-types", version = "=0.5.0" }
llguidance = "=1.7.0"
nom = "=8.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serial_test = "=3.4.0"
thiserror = "=2.0.18"
toktrie = "=1.7.0"
tracing = "=0.1.44"
tracing-core = "=0.1.36"
tracing-subscriber = { version = "=0.3.23", features = ["json"] }
walkdir = "=2.5.0"
