[package]
name = "embeddings"
version = "0.1.45"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../llama-cpp-2", version = "0.1.45" }
hf-hub = { workspace = true }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }

[lints]
workspace = true
