[package]
name = "llama-cpp-bindings-build"
description = "Build system for llama-cpp-bindings-sys FFI bindings"
version = "0.5.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/intentee/llama-cpp-bindings"

[dependencies]
bindgen = "0.72.1"
cc = { version = "1.2.58", features = ["parallel"] }
cmake = "0.1"
find_cuda_helper = "0.2.0"
glob = "0.3.3"
walkdir = "2"

[features]
cuda = []
cuda-no-vmm = ["cuda"]
metal = []
dynamic-link = []
dynamic-backends = ["dynamic-link"]
vulkan = []
openmp = []
rocm = []
shared-stdcxx = []
static-stdcxx = []
system-ggml = []
system-ggml-static = ["system-ggml"]
