[package]
name = "llama-cpp-bindings-build"
description = "Build system for llama-cpp-bindings-sys FFI bindings"
version = "0.5.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/intentee/llama-cpp-bindings"

[dependencies]
bindgen = { workspace = true }
cc = { workspace = true }
cmake = { workspace = true }
find_cuda_helper = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[features]
cuda = []
cuda-no-vmm = ["cuda"]
metal = []
dynamic-link = []
dynamic-backends = ["dynamic-link"]
vulkan = []
openmp = []
rocm = []
shared-stdcxx = []
static-stdcxx = []
system-ggml = []
system-ggml-static = ["system-ggml"]
