[package]
name = "llama-cpp-bindings-sys"
description = "Low level bindings to llama.cpp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "llama"

include = [
    "wrapper*.h",
    "wrapper_*.cpp",
    "marker_probes/**/*.h",
    "marker_probes/**/*.cpp",
    "build.rs",
    "/src",

    "/llama.cpp/common/**/*.h",
    "/llama.cpp/common/**/*.hpp",
    "/llama.cpp/common/**/*.cpp",
    "/llama.cpp/ggml/include/*.h",
    "/llama.cpp/ggml/src/*.h",
    "/llama.cpp/ggml/src/*.c",
    "/llama.cpp/ggml/src/*.cpp",
    "/llama.cpp/src/*.h",
    "/llama.cpp/src/*.cpp",
    "/llama.cpp/src/models/*.h",
    "/llama.cpp/src/models/*.cpp",
    "/llama.cpp/tools/mtmd/*.h",
    "/llama.cpp/tools/mtmd/*.cpp",
    "/llama.cpp/tools/mtmd/debug/*.h",
    "/llama.cpp/tools/mtmd/debug/*.cpp",
    "/llama.cpp/tools/mtmd/models/*.h",
    "/llama.cpp/tools/mtmd/models/*.cpp",

    "/llama.cpp/convert_hf_to_gguf.py", # Yes, it's required
    "/llama.cpp/common/build-info.cpp.in",

    "/llama.cpp/ggml/src/ggml-cuda.cu",
    "/llama.cpp/ggml/src/ggml-metal.m",
    "/llama.cpp/ggml/src/ggml-metal.metal",

    "/llama.cpp/include/llama.h",
    "/llama.cpp/include/llama-cpp.h",

    "/llama.cpp/ggml/src/ggml-cpu/**/*",
    "/llama.cpp/ggml/src/ggml-cuda/**/*",
    "/llama.cpp/ggml/src/ggml-metal/**/*",
    "/llama.cpp/ggml/src/ggml-vulkan/**/*",
    "/llama.cpp/ggml/src/ggml-hip/**/*",

    "/llama.cpp/ggml/src/llamafile/sgemm.h",
    "/llama.cpp/ggml/src/llamafile/sgemm.cpp",

    "/llama.cpp/pocs",
    "/llama.cpp/vendor",

    "/llama.cpp/CMakeLists.txt",
    "/llama.cpp/common/CMakeLists.txt",
    "/llama.cpp/ggml/CMakeLists.txt",
    "/llama.cpp/ggml/src/CMakeLists.txt",
    "/llama.cpp/src/CMakeLists.txt",

    "/llama.cpp/cmake",
    "/llama.cpp/ggml/cmake",
    "/llama.cpp/common/cmake",
]

[dependencies]

[build-dependencies]
llama-cpp-bindings-build = { workspace = true, features = [] }

[features]
cuda = ["llama-cpp-bindings-build/cuda"]
cuda-no-vmm = ["cuda", "llama-cpp-bindings-build/cuda-no-vmm"]
metal = ["llama-cpp-bindings-build/metal"]
dynamic-link = ["llama-cpp-bindings-build/dynamic-link"]
dynamic-backends = ["dynamic-link", "llama-cpp-bindings-build/dynamic-backends"]
vulkan = ["llama-cpp-bindings-build/vulkan"]
openmp = ["llama-cpp-bindings-build/openmp"]
rocm = ["llama-cpp-bindings-build/rocm"]
shared-stdcxx = ["llama-cpp-bindings-build/shared-stdcxx"]
static-stdcxx = ["llama-cpp-bindings-build/static-stdcxx"]
system-ggml = ["llama-cpp-bindings-build/system-ggml"]
system-ggml-static = ["system-ggml", "llama-cpp-bindings-build/system-ggml-static"]
