[package]
name = "llama-cpp-bindings-tests"
description = "Integration tests and fixtures for llama-cpp-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
encoding_rs = { workspace = true }
llama-cpp-bindings = { workspace = true }
llama-cpp-bindings-sys = { workspace = true }
llama-cpp-test-harness = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "context"
harness = false

[[test]]
name = "llama_backend"
harness = false

[[test]]
name = "context_kv_cache"
harness = false

[[test]]
name = "deepseek_r1_8b_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "deepseek_r1_8b_classifier_emits_reasoning"
harness = false

[[test]]
name = "deepseek_r1_8b_duck_types_gemma_paired_quote"
harness = false

[[test]]
name = "deepseek_r1_8b_duck_types_glm_key_value_tags"
harness = false

[[test]]
name = "deepseek_r1_8b_duck_types_mistral_bracketed_json"
harness = false

[[test]]
name = "deepseek_r1_8b_duck_types_qwen_xml"
harness = false

[[test]]
name = "deepseek_r1_8b_recognizes_empty_tool_calls_when_input_is_plain_content_with_tools_requested"
harness = false

[[test]]
name = "deepseek_r1_8b_recognizes_empty_tool_calls_when_tools_not_requested"
harness = false

[[test]]
name = "context_session"
harness = false

[[test]]
name = "embeddings"
harness = false

[[test]]
name = "gemma4_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "gemma4_classifier_emits_reasoning"
harness = false

[[test]]
name = "gemma4_classifier_emits_reasoning_for_multimodal_thinking_prompt"
harness = false

[[test]]
name = "gemma4_parses_tool_call_payload"
harness = false

[[test]]
name = "gemma4_template_override_returns_full_markers"
harness = false

[[test]]
name = "glm47_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "glm47_classifier_emits_reasoning"
harness = false

[[test]]
name = "glm47_parses_tool_call_payload"
harness = false

[[test]]
name = "glm47_template_override_returns_full_markers"
harness = false

[[test]]
name = "mistral3_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "mistral3_classifier_emits_reasoning"
harness = false

[[test]]
name = "mistral3_classifier_emits_reasoning_for_multimodal_thinking_prompt"
harness = false

[[test]]
name = "mistral3_parses_tool_call_payload"
harness = false

[[test]]
name = "eval_multimodal_chunks_records_exact_token_counts"
harness = false

[[test]]
name = "ingest_prompt_chunk"
harness = false

[[test]]
name = "llguidance"
harness = false

[[test]]
name = "model_chat_template"
harness = false

[[test]]
name = "model_context_creation"
harness = false

[[test]]
name = "model_helpers"
harness = false

[[test]]
name = "model_params"
harness = false

[[test]]
name = "model_loading_errors"
harness = false

[[test]]
name = "model_lora_adapter_errors"
harness = false

[[test]]
name = "model_metadata_kv"
harness = false

[[test]]
name = "model_properties"
harness = false

[[test]]
name = "model_sampling"
harness = false

[[test]]
name = "model_special_tokens"
harness = false

[[test]]
name = "model_str_to_token"
harness = false

[[test]]
name = "model_token_to_piece"
harness = false

[[test]]
name = "model_tokens_iterator"
harness = false

[[test]]
name = "mtmd_bitmap"
harness = false

[[test]]
name = "mtmd_chunk_operations"
harness = false

[[test]]
name = "mtmd_chunk_structure"
harness = false

[[test]]
name = "mtmd_context"
harness = false

[[test]]
name = "mtmd_evaluation"
harness = false

[[test]]
name = "mtmd_tokenization"
harness = false

[[test]]
name = "multimodal"
harness = false

[[test]]
name = "parse_chat_message"
harness = false

[[test]]
name = "qwen35_chat_inference_emits_reasoning_when_template_auto_opens"
harness = false

[[test]]
name = "qwen35_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "qwen35_classifier_emits_reasoning"
harness = false

[[test]]
name = "qwen35_classifier_emits_reasoning_for_multimodal_thinking_prompt"
harness = false

[[test]]
name = "qwen35_parses_constrained_schema_payload"
harness = false

[[test]]
name = "qwen35_parses_tool_call_payload"
harness = false

[[test]]
name = "qwen35_recognizes_empty_tool_calls_when_input_is_plain_content_with_tools_requested"
harness = false

[[test]]
name = "qwen36_chat_inference_emits_reasoning_when_template_auto_opens"
harness = false

[[test]]
name = "qwen36_classifier_does_not_emit_reasoning_for_thinking_disabled_prompt"
harness = false

[[test]]
name = "qwen36_classifier_emits_reasoning"
harness = false

[[test]]
name = "qwen36_classifier_emits_reasoning_for_multimodal_thinking_prompt"
harness = false

[[test]]
name = "reranker"
harness = false

[[test]]
name = "sampled_token_classifier_markers"
harness = false

[[test]]
name = "sampling"
harness = false

[[test]]
name = "text_generation"
harness = false

[features]
cuda = ["llama-cpp-bindings/cuda"]
cuda-no-vmm = ["llama-cpp-bindings/cuda-no-vmm"]
metal = ["llama-cpp-bindings/metal"]
vulkan = ["llama-cpp-bindings/vulkan"]
rocm = ["llama-cpp-bindings/rocm"]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
