[package]
name = "llama-cpp-bindings-tests"
description = "Integration tests and fixtures for llama-cpp-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
encoding_rs = { workspace = true }
llama-cpp-bindings = { workspace = true }
llama-cpp-bindings-sys = { workspace = true }
llama-cpp-test-harness = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "backend_initialization"
harness = false

[[test]]
name = "chat_template_and_message_parsing"
harness = false

[[test]]
name = "embedding_and_encoder"
harness = false

[[test]]
name = "kv_cache_and_session"
harness = false

[[test]]
name = "model_loading_errors"
harness = false

[[test]]
name = "multimodal_vision"
harness = false

[[test]]
name = "reasoning_markers_and_tool_calls"
harness = false

[[test]]
name = "sampling_and_constrained_decoding"
harness = false

[[test]]
name = "vocabulary_and_metadata"
harness = false

[features]
cuda = ["llama-cpp-bindings/cuda"]
cuda-no-vmm = ["llama-cpp-bindings/cuda-no-vmm"]
metal = ["llama-cpp-bindings/metal"]
vulkan = ["llama-cpp-bindings/vulkan"]
rocm = ["llama-cpp-bindings/rocm"]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
