[package]
name = "llama-cpp-bindings-tests"
description = "Integration tests and fixtures for llama-cpp-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autotests = false

[dependencies]
anyhow = { workspace = true }
encoding_rs = { workspace = true }
llama-cpp-bindings = { workspace = true }
llama-cpp-bindings-sys = { workspace = true }
llama-cpp-test-harness = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "main"
harness = false

[features]
cuda = ["llama-cpp-bindings/cuda"]
cuda-no-vmm = ["llama-cpp-bindings/cuda-no-vmm"]
metal = ["llama-cpp-bindings/metal"]
vulkan = ["llama-cpp-bindings/vulkan"]
rocm = ["llama-cpp-bindings/rocm"]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unnecessary_wraps = "allow"
