[package]
name = "llama-cpp-bindings"
description = "llama.cpp bindings for Rust"
version = "0.5.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/intentee/llama-cpp-bindings"

[dependencies]
encoding_rs = { workspace = true }
enumflags2 = "0.7.12"
llama-cpp-bindings-sys = { workspace = true }
thiserror = "2"
tracing = { workspace = true }
tracing-core = "0.1"
llguidance = { version = "1.7.0", optional = true }
toktrie = { version = "1.7.0", optional = true }

[dev-dependencies]
serial_test = "3"
tracing-subscriber = { version = "0.3", features = ["json"] }

[features]
default = ["openmp", "android-shared-stdcxx"]
cuda = ["llama-cpp-bindings-sys/cuda"]
cuda-no-vmm = ["cuda", "llama-cpp-bindings-sys/cuda-no-vmm"]
metal = ["llama-cpp-bindings-sys/metal"]
dynamic-link = ["llama-cpp-bindings-sys/dynamic-link"]
dynamic-backends = ["dynamic-link", "llama-cpp-bindings-sys/dynamic-backends"]
vulkan = ["llama-cpp-bindings-sys/vulkan"]
openmp = ["llama-cpp-bindings-sys/openmp"]
rocm = ["llama-cpp-bindings-sys/rocm"]
sampler = []
# Only has an impact on Android.
android-shared-stdcxx = ["llama-cpp-bindings-sys/shared-stdcxx"]
android-static-stdcxx = ["llama-cpp-bindings-sys/static-stdcxx"]
system-ggml = ["llama-cpp-bindings-sys/system-ggml"]
system-ggml-static = ["system-ggml", "llama-cpp-bindings-sys/system-ggml-static"]
llguidance = ["dep:llguidance", "dep:toktrie"]

[target.'cfg(all(target_os = "macos", any(target_arch = "aarch64", target_arch = "arm64")))'.dependencies]
llama-cpp-bindings-sys = { workspace = true, features = ["metal"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

# Generated FFI bindings use these patterns
used_underscore_binding = "allow"

[package.metadata.docs.rs]
features = ["sampler"]
