[package]
name = "llama-cpp-log-decoder"
description = "Decoder for the llama.cpp / ggml log callback stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
