[package]
name = "llama-cpp-test-harness"
description = "Declarative, deterministic integration-test harness for llama-cpp-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
hf-hub = { workspace = true }
inventory = { workspace = true }
libtest-mimic = { workspace = true }
llama-cpp-bindings = { workspace = true }
llama-cpp-test-harness-macros = { workspace = true }
thiserror = { workspace = true }

[features]
cuda = ["llama-cpp-bindings/cuda"]
cuda-no-vmm = ["llama-cpp-bindings/cuda-no-vmm"]
metal = ["llama-cpp-bindings/metal"]
vulkan = ["llama-cpp-bindings/vulkan"]
rocm = ["llama-cpp-bindings/rocm"]

[[test]]
name = "harness_self_test"
harness = false

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
unnecessary_wraps = "allow"
